style: fix auth-wrapper alignment and width

--- a/frontend/src/views/AuthView.css
+++ b/frontend/src/views/AuthView.css
@@ -1,10 +1,16 @@
 body {
     font-size: 1rem;
+    background-color: var(--bg-dark);
+    width: 100%;
+    height: 100%;
 }
 
 .auth-wrapper {
-    background-color: var(--bg-dark);
+    background-color: var(--bg);
+    border-radius: 2rem;
     width: 100%;
+    max-width: 450px;
+    margin: auto;
     padding: 3rem;
 }
 
